    OperaDriver.setPref() which are now deprecated.

    (andreastt)

  [ENHANCEMENTS]

  * Reduced much code duplication.  (andreastt)

  * Default product for OperaRunnerSettings is now DESKTOP.
    (andreastt)

  * Upgraded WebDriver atoms.  (andreastt)

  * Upgraded OperaWebElement.click() to use new atoms for selecting an
    OPTION element.  (andreastt)

  [BUG FIXES]

  * Asserting if element is stale on OperaWebElement.getText(),
    getLocation(), getTagName() and clear().  (andreastt)

  * If a page load times out we now return control of the browser _in
    all_ situations.  (andreastt)

  * Reverted check for setLastModified on newly copied launcher as it
    seems to be failing on Windows.  (andreastt)

  * OperaLauncherRunner.isOperaRunning() no longer throws exception if
    launcher has shut down, but returns false instead.  (andreastt)

  * Object IDs are being garbage collected on each new page load, no
    need to store and verify URL when checking for stale elements.
    (andreastt)

  * OperaLauncherBinary is now using Platform.is() (from Selenium) for
    platform comparison.  Will output nicer warning when failing on
    Windows without VS C++ 2008 redistributable package.  (andreastt)

  * Fixed issue with SocketException for double shutdown call in
    OperaLauncherRunnerProtocol, fixes tests for Windows.  (andreastt)

  * Getting colours with non-RGB values (such as "transparent") now
    works.  Resolves issue #49.  (andreastt)

  * OperaDriver.close() should quit browser if it closes the last
    window, resolves issue #48.  (andreastt)

  [TESTS]

  * Added many new test run configurations for IntelliJ.  (andreastt)

  * Fixed NullPointerException in the case something went wrong during
    initialization of OperaDriver in OperaDriverTestCase.  (andreastt)

  * Added tests for OperaStrings.  (ajayk)

  * Tests for circumstances where StaleElementReferenceException
    should be thrown.  (andreastt)
